[gd_scene load_steps=2 format=3 uid="uid://sn3jjr4cii54"]

[ext_resource type="Script" uid="uid://b6wlg86hcdkja" path="res://src/prompts/nwf_path/nwf_path.gd" id="1_esyec"]

[node name="NwfPath" type="AcceptDialog"]
title = "NWF file not found."
initial_position = 2
size = Vector2i(623, 115)
visible = true
script = ExtResource("1_esyec")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 615.0
offset_bottom = 66.0

[node name="NoticeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SBTF Mod Manager needs a path to sbtf_pub.nwf. Please provide a path below."
horizontal_alignment = 1

[node name="PathSelector" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/PathSelector"]
layout_mode = 2
text = "Path to sbtf_pub.nwf: "

[node name="PathToLineEdit" type="LineEdit" parent="VBoxContainer/PathSelector"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileDialogButton" type="Button" parent="VBoxContainer/PathSelector"]
layout_mode = 2
text = "..."

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(900, 360)
force_native = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.nwf")
